--- a/_config/config.yml
+++ b/_config/config.yml
@@ -6,3 +6,6 @@ Dynamic\Jobs\Model\JobCollectionController:
   extensions:
     - Dynamic\Collection\CollectionExtension
     - Dynamic\Jobs\Extensions\JobCollectionExtension
+SilverStripe\Security\Group:
+  extensions:
+    - Dynamic\Jobs\Extensions\JobsGroupDataExtension
